# minty

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: appos-build.yml
src/: App.css  App.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_fts5_index.sql  003_add_lang.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: import.rs  llm.rs  mod.rs  notes.rs  rag.rs  search.rs  suggestions.rs
src-tauri/src/db/: migrations.rs  schema.sql
src-tauri/src/llm/: backend.rs  mod.rs  ollama.rs
src-tauri/src/notes/: engine.rs  parser.rs
src-tauri/src/rag/: augmentation.rs  chunker.rs  embedder.rs  embedding_model.rs  errors.rs  generation.rs  lang.rs  mod.rs  related.rs  retrieval.rs  search.rs
src/assets/: motivationalQuotes.json
src/components/: AiSettingsPanel.tsx  BacklinksPanel.tsx  ContextPanel.tsx  FileTreePanel.tsx  FooterPanel.tsx  HistoryPanel.tsx  IndexingIndicator.tsx  IntroAnimation.tsx  LexicalEditor.tsx  MusicPlayer.tsx  Navbar.tsx  Notification.tsx  NotificationContainer.tsx  SettingsPanel.tsx  SmartSearch.tsx
src/components/RagChat/: CitationPill.tsx  MessageList.tsx  RagChat.tsx  SourcePanel.tsx  StreamingMessage.tsx
src/components/plugins/: InlineSuggestionPlugin.tsx  ToolbarPlugin.tsx
src/components/ui/: animated-theme-toggler.tsx  (+1 more)
src/hooks/: useRagStream.ts
src/lib/: tauri.ts
src/store/: rag.ts
